[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/Size10Outline.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/TreeFallGame.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Tiles/bigtree.png" type="Texture" id=3]
[ext_resource path="res://Scripts/ClothMinigameNode.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 52 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 8 )

[node name="ClothMinigameNode" type="Area2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 48 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9.53674e-07, -1.90735e-06 )
scale = Vector2( 3.688, 3.688 )
texture = ExtResource( 3 )

[node name="TreeFallGame" parent="." instance=ExtResource( 2 )]

[node name="Notif" type="Label" parent="."]
visible = false
margin_left = -80.0
margin_top = -72.0
margin_right = 80.0
margin_bottom = -56.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Press E to interact!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_ClothMinigameNode_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ClothMinigameNode_body_exited"]
[connection signal="start" from="." to="TreeFallGame" method="_on_ClothMinigameNode_start"]
[connection signal="finished" from="TreeFallGame" to="." method="_on_TreeFallGame_finished"]
